--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 <body align="center" bgcolor="lightblue">
 <h1>Login</h1>
 </br>
-<form action="index2.php">
+<form action="home.html">
 <h4>Username:<input type="username" placeholder="Input Username"></h4>
 <h4>Password:<input type="password" placeholder="Input Password"</h4>
 </br>
@@ -16,6 +16,6 @@
 </br>
 <a href="resetpassword.php">Reset Password</a>
 &nbsp;&nbsp;
-<a href="signup.php">Sign Up</a>
+<a href="register.html">Sign Up</a>
 </body>
 </html>
