Update and rename index2.php to home.html

--- a/home.html
+++ b/home.html
@@ -9,10 +9,10 @@
 <center>
 <h1> YapA Photo Gallery </h1>
 <h3> List of Photos </h3>
-<a href="firstphoto.php">First Picture</a><br>
-<a href="secondphoto.php">Second Picture</a><br>
-<a href="thirdphoto.php">Third Picture</a><br>
+<a href="photo1.html">First Picture</a><br>
+<a href="photo2.html">Second Picture</a><br>
+<a href="photo3.html">Third Picture</a><br>
   </br>
-  <a href="index.php">Log out</a>
+  <a href="login.html">Log out</a>
 </body>
 </html>
