Update and rename firstphoto.php to photo1.html

--- a/photo1.html
+++ b/photo1.html
@@ -8,7 +8,7 @@
 <h1> YapA Photo Gallery </h1>
 <img src="firstphoto.jpg" width="500" height="500"> <br>
 <br>
-<a href="index2.php">Go back to Home</a>
-<a href="secondphoto.php">Next Photo</a>
+<a href="home.html">Go back to Home</a>
+<a href="photo2.html">Next Photo</a>
   </body>
   </html>
