--- a/photo2.html
+++ b/photo2.html
@@ -8,7 +8,7 @@
 <h1> YapA Photo Gallery </h1>
 <img src="secondphoto.jpg" width="500" height="500"> <br>
 <br>
-<a href="index2.php">Go back to Home</a>
-<a href="thirdphoto.php">Next Photo</a>
+<a href="home.html">Go back to Home</a>
+<a href="photo3.html">Next Photo</a>
   </body>
   </html>
