Update and rename thirdphoto.php to photo3.html

--- a/photo3.html
+++ b/photo3.html
@@ -8,6 +8,6 @@
 <h1> YapA Photo Gallery </h1>
 <img src="thirdphoto.jpg" width="500" height="500"> <br>
 <br>
-<a href="index2.php">Go back to Home</a>
+<a href="home.html">Go back to Home</a>
   </body>
   </html>
