--- a/home.html
+++ b/home.html
@@ -13,6 +13,6 @@
 <a href="photo2.html">Second Picture</a><br>
 <a href="photo3.html">Third Picture</a><br>
   </br>
-  <a href="index.php">Log out</a>
+  <a href="login.html">Log out</a>
 </body>
 </html>
