--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
         var username = "username"; 
         var password = "password";
         if ((un == "username") && (pw == "password")) {
+		alert ("Welcome,Username.");
             return true;
         }
 	if (( un == "" ) && ( pw == "" )) {
